# go_hello_world_race

./: .bazelrc  .bazelrc.generated  .gitignore  BUILD  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE.bazel  bazel-bin  bazel-go_hello_world_race  bazel-out  bazel-testlogs  calculate_sysroot_hashes.sh  cc_toolchain_config.bzl  cc_wrapper.sh  deps.bzl  download_sysroots.bash  example_cache_folders_2025_05_23_1515  find_llvm_toolchain_llvm  flake.nix  go.mod  hello.cc  hello.go  hello_cgo  hello_test.go  local_llvm.bzl  minimal.MODULE.bazel  not.WORKSPACE.bazel  output_2025_05_23_1430  random_notes.md  result  setup_sysroot_repo.sh  sysroot.BUILD  temp.BUILD.bazel  toolchain.BUILD  toolchains_llvm_tests_MODULE_bazel
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/: README.md
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/include/config/: kernel.release
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/include/editline/: readline.h
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/include/linux/: version.h
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/include/openssl/: configuration.h
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/: ld-linux-x86-64.so.2  libBrokenLocale.so.1  libanl.so.1  libc++.so.1  libc++abi.so.1  libc.so.6  libc_malloc_debug.so.0  libdl.so.2  libedit.la  libedit.so.0  libffi.la  libffi.so.8.1.4  libformw.so.6  libm.so.6  libmenu.so.6  libmvec.so.1  libncursesw.so.6  libnsl.so.1  libnss_compat.so.2  libnss_db.so.2  libnss_dns.so.2  libnss_files.so.2  libnss_hesiod.so.2  libpanelw.so.6  libpthread.so.0  libresolv.so.2  librt.so.1  libssl.so.3  libthread_db.so.1  libutil.so.1  libxml2.la  libxml2.so.2  libyaml-0.so.2.0.9  libyaml.la  libz.so.1.3.1
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/terminfo/a/: a210  abm85  abm85e  abm85h  abm85h-old  adm36  altos-2  altos-5
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/terminfo/c/: cit101e  cit101e-132  cit101e-n  cit101e-n132  crt
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/terminfo/d/: dec-vt220  dec-vt340
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/terminfo/e/: emu-220
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/terminfo/g/: go140  go140w  go225
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/terminfo/h/: h29a-kc-bc  h29a-nkc-bc  he80  hp2392  hp2645a  hp300h  hp700-wy  hp9845  hp98550a  hpex  hpsub
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/terminfo/k/: kt7
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/terminfo/m/: mai  mt4520-rv
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/terminfo/n/: ncsa  ncsa-m-ns  ncsa-ns  ncsa-vt220  ncsa-vt220-8  netbsd6  news-29  news-29-euc  news-29-sjis  news-33  news-33-euc  news-33-sjis  news-42  news-42-euc  news-42-sjis  news-old-unk  news-unk  news28  news29  news31-a  news31-o  news40  news42  nwp-517-w  nwp517
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/terminfo/o/: opus3n1+  otek4115
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/terminfo/p/: pcmw  pcvt25  pcvt25-color  pcvt25w  pcvt28  pcvt28w  pcvt35  pcvt35w  pcvt40  pcvt40w  pcvt43  pcvt43w  pcvt50  pcvt50w  pcvtXX
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/terminfo/r/: rebus3180
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/terminfo/t/: ti916-132  ti916-220-7  ti916-8  ti916-8-132  tvi9065  tvi910  tvi910+  tvi912b  tvi912b-2p-p  tvi912b-2p-unk  tvi912b-mc  tvi912b-unk-vb  tvi912b-vb  tvi912c-2p  tvi912c-2p-mc  tvi912c-mc-vb  tvi912c-p  tvi912c-p-vb  tvi912c-unk  tvi912cc  tvi920  tvi920b  tvi920b-2p-p  tvi920b-p  tvi920b-unk  tvi920b-vb-mc  tvi920c-2p  tvi920c-2p-unk  tvi920c-mc  tvi920c-mc-2p  tvi920c-p-vb  tvi920c-unk-vb  tvi920c-vb  tvi921  tvi924  tvi92B  tvi92D  tvipt
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/terminfo/u/: ultima2  uniterm49  uts30
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/terminfo/v/: v200-nam  versaterm  vt200  vt200-8bit  vt200-old  vt200-w  vt220-base  vt220-js  vt220d  vt300  vt300-nam  vt300-w  vt320-k311  vt320-w-nam  vt320nam  vt400  vt420  vt420f  vt420pc  vt420pcdos  vt510  vt510pc  vt510pcdos  vt520  vt520ansi  vt525
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/terminfo/w/: wsvt25  wsvt25m
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/terminfo/x/: x68k
bazel_remote_runner_sysroot-3cacd6d865876e9cfdc010c3922275ee94c7f889/sysroot/lib/terminfo/z/: z29a-kc-uc  z29a-nkc-uc  z340  z340-nam
docs/: bazel_sysroot_lib_amd64_file_list  bazel_sysroot_library_file_list  bazel_sysroot_llvm_amd64_file_list  file_listing.md  malt3_sysroots_MODULE.bazel  static-clang_file_listing_205_06_04
sysroot/: BUILD.bazel  default.nix  extension.bzl
