#
# BUILD.bazel
#

load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_cc//cc:defs.bzl", "cc_library")

# System dependencies for AMD64
cc_library(
    name = "system_deps_amd64",
    srcs = ["@bazel_sysroot_lib_amd64//:lib/libxml2.so.2"],
    includes = ["@bazel_sysroot_library//:include"],
    linkstatic = 0,
    linkopts = [
        "-L@bazel_sysroot_lib_amd64//:lib",
        "-Wl,-rpath,$$ORIGIN/../../external/bazel_sysroot_lib_amd64/lib",
        "-Wl,--no-as-needed",
        "-lxml2",
    ],
    visibility = ["//visibility:public"],
)

# System dependencies for ARM64
cc_library(
    name = "system_deps_arm64",
    srcs = ["@bazel_sysroot_lib_arm64//:lib/libxml2.so.2"],
    includes = ["@bazel_sysroot_library//:include"],
    linkstatic = 0,
    linkopts = [
        "-L@bazel_sysroot_lib_arm64//:lib",
        "-Wl,-rpath,$$ORIGIN/../../external/bazel_sysroot_lib_arm64/lib",
        "-Wl,--no-as-needed",
        "-lxml2",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "hello_lib",
    srcs = ["hello.go"],
    importpath = "github.com/das/go_hello_world_race",
)

go_binary(
    name = "hello_bin",
    srcs = ["hello.go"],
    deps = [":hello_lib"],
)

# Test for AMD64
go_test(
    name = "hello_test_amd64",
    srcs = ["hello_test.go"],
    embed = [":hello_lib"],
    cgo = True,
    cdeps = [":system_deps_amd64"],
    data = [
        "@bazel_sysroot_lib_amd64//:all",
        "@bazel_sysroot_llvm_amd64//:all",
    ],
    impure_env = {
        "LD_LIBRARY_PATH": "external/bazel_sysroot_lib_amd64/lib",
    },
    clinkopts = [
        "-L@bazel_sysroot_lib_amd64//:lib",
        "-Wl,-rpath,$$ORIGIN/../../external/bazel_sysroot_lib_amd64/lib",
        "-Wl,--no-as-needed",
        "-lxml2",
    ],
)

# Test for ARM64
go_test(
    name = "hello_test_arm64",
    srcs = ["hello_test.go"],
    embed = [":hello_lib"],
    cgo = True,
    cdeps = [":system_deps_arm64"],
    data = [
        "@bazel_sysroot_lib_arm64//:all",
        "@bazel_sysroot_llvm_arm64//:all",
    ],
    impure_env = {
        "LD_LIBRARY_PATH": "external/bazel_sysroot_lib_arm64/lib",
    },
    clinkopts = [
        "-L@bazel_sysroot_lib_arm64//:lib",
        "-Wl,-rpath,$$ORIGIN/../../external/bazel_sysroot_lib_arm64/lib",
        "-Wl,--no-as-needed",
        "-lxml2",
    ],
)

platform(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)

platform(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
    visibility = ["//visibility:public"],
)

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_hello_world_race_lib",
    srcs = ["main.go"],
    importpath = "github.com/das/go_hello_world_race",
)

go_binary(
    name = "go_hello_world_race",
    srcs = ["main.go"],
    deps = [
        ":go_hello_world_race_lib",
    ],
)

go_test(
    name = "go_hello_world_race_test",
    srcs = ["main_test.go"],
    deps = [
        ":go_hello_world_race_lib",
    ],
    cgo = True,
    static = "on",
)

# end