#
# sysroot/BUILD.bazel
#

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

genrule(
    name = "extract_sysroot",
    srcs = ["@bazel_sysroot_tarball//file"],
    outs = ["sysroot_marker.txt"],
    cmd = """
      mkdir -p $(@D)/sysroot
      tar -xzf $(location @bazel_sysroot_tarball//file) -C $(@D)/sysroot
      touch $@
    """,
    output_to_bindir = True,
)

filegroup(
    name = "all",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

# end